# sibela-project

./: CMakeLists.txt  README.md  appinfo.rc  build.sh  configure.sh  icon.rc  main.c  sibeladb.sql
assets/ascii/: logo.txt
components/: header.c  header.h  table.c  table.h
components/ui/: dateRange.c  dateRange.h  inputBox.c  inputBox.h  legend.c  legend.h  pieChart.c  pieChart.h  searchBar.c  searchBar.h  sortControl.c  sortControl.h  textArea.c  textArea.h  toast.c  toast.h  welcomePage.c  welcomePage.h
constants/: color.h  layout.h
data/: absensi.c  jadwalMurid.c  jadwalPertemuan.c  jadwalPertemuan.h  mapel.c  mapel.h  materi.c  materi.h  murid.c  murid.h  pembayaran.c  pembayaran.h  pengajar.c  pengajar.h  ruangan.c  ruangan.h  staf.c  staf.h
libs/: handleInput.c  handleInput.h  login.c  safe_string.h  utils.c  utils.h  validator.c  validator.h
libs/headers/: raygui.h
model/: model.c  model.h  window.h  windows.c
types/: dbTypes.h  form.h
update/: update.c  update.h
views/: Loading.c  Loading.h  drawView.c  drawView.h  homeView.c  homeView.h  landingView.c  loginView.c  loginView.h  memberView.c
views/home/muridHome/: muridHome.c  muridHome.h
views/home/muridHome/components/jadwal/: read.c
views/home/muridHome/components/materi/: read.c  read.h
views/home/muridHome/components/pembayaran/: read.c  read.h
views/home/pengajarHome/: pengajarHome.c  pengajarHome.h
views/home/pengajarHome/components/Materi/: create.c  create.h  read.c  read.h  update.c  update.h
views/home/staffHome/: staffHome.c  staffHome.h
(+41 files in other folders)
